Changes in button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <button type="button" class="btn btn-secondary mt-1"onclick="func2()">SUBTRACT</button>
 <button type="button" class="btn btn-success mt-1"onclick="func3()">MULTIPLY</button>
 <button type="button" class="btn btn-danger mt-1"onclick="func4()">DIVIDE</button>
-<button type="button" class="btn btn-danger mt-1"onclick="func()">All</button>
+<button type="button" class="btn btn-danger mt-1"onclick="func()">All Functions</button>
 <div id="result">
 </div>
 </div>
